bk_ida/gccida/c2/build_conditional_expr
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_conditional_expr/src/c-typeck.c:3841:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_conditional_expr/src/c-typeck.c:3869:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_conditional_expr/src/c-typeck.c:3873:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_conditional_expr/src/c-typeck.c:3874:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_conditional_expr/src/c-typeck.c:3875:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_conditional_expr/src/c-typeck.c:3894:14: error: expected identifier or '('
 struct expr = v5; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_conditional_expr/src/c-typeck.c:4043:20: error: expected expression
v32 = ( tree_node *)*( &global_trees + 27); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_conditional_expr/src/c-typeck.c:4043:9: error: use of undeclared identifier 'tree_node'
v32 = ( tree_node *)*( &global_trees + 27); 
        ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_conditional_expr/src/obj/c-typeck.o] Error 1
